# faker_food

./: .coveragerc  LICENSE  README.md  pyproject.toml
faker_food/: __init__.py  dish_descriptions.py  dishes.py  ethnic_categories.py  fruits.py  ingredients.py  measurements.py  spices.py  sushi.py  vegetables.py
tests/: conftest.py  tests.py
