[tool.poetry]
name = "faker_food"
version = "0.1.0"
description = "Food related provider for the Python Faker library"
authors = ["Mark Adams <madams74@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "faker_food"}]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^12.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
black = "^22.1.0"

[tool.pytest.ini_options]
addopts = "-ra -v --ignore=.venv --cov=. --cov-report=html"
python_files = "tests.py test_*.py"
testpaths = [
   "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
