[tool.poetry]
name = "faker_food"
version = "0.1.0"
description = "Food related provider for the Python Faker library"
authors = ["Mark Adams <madams74@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "faker_food"}]
repository = "https://github.com/madams74/faker_food"
url="https://github.com/madams74/faker_food"
keywords = ["faker", "data", "test", "mock", "generator", "food"]
classifiers = [
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Topic :: Software Development",
   "Topic :: Software Development :: Libraries :: Python Modules",
   "Topic :: Software Development :: Testing",
]


[tool.poetry.dependencies]
python = "^3.8"
Faker = "^12.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
black = "^22.1.0"

[tool.pytest.ini_options]
addopts = "-ra -v --ignore=.venv --cov=. --cov-report=html"
python_files = "tests.py test_*.py"
testpaths = [
   "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
